--- a/src/components/gameDetailComponents/GamePlaySwiper.css
+++ b/src/components/gameDetailComponents/GamePlaySwiper.css
@@ -11,5 +11,5 @@
 }
 
 .swiper-slide-active img {
-  @apply w-[248px] h-[140px] border border-white rounded-lg z-10 transition-all duration-500 ease-in-out;
+  @apply w-[248px] h-[140px] rounded-lg z-10 transition-all duration-500 ease-in-out;
 }
