--- a/src/App.css
+++ b/src/App.css
@@ -198,3 +198,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: white;
+}
