--- a/src/components/HomeComponents/HeroSwiper.css
+++ b/src/components/HomeComponents/HeroSwiper.css
@@ -1,9 +1,9 @@
-.swiper {
+.heroSwiper {
   width: 100%;
   height: 100%;
 }
 
-.swiper-slide img {
+.heroSwiper .swiper-slide img {
   width: auto !important;
   height: auto !important;
   object-fit: fill !important;
