--- a/src/components/gameDetailComponents/GamePlaySection/GamePlaySwiper.css
+++ b/src/components/gameDetailComponents/GamePlaySection/GamePlaySwiper.css
@@ -1,15 +1,15 @@
-.swiper {
+.gamescreenShotSwiper {
   @apply w-full h-full;
 }
 
-.swiper-slide {
+.gamescreenShotSwiper .swiper-slide {
   @apply flex justify-center items-center;
 }
 
-.swiper-slide img {
-  @apply block object-cover;
+.gamescreenShotSwiper .swiper-slide img {
+  @apply w-[198px] h-[112px] object-cover rounded-lg;
 }
 
-.swiper-slide-active img {
+.gamescreenShotSwiper .swiper-slide-active img {
   @apply w-[248px] h-[140px] rounded-lg z-10 transition-all duration-500 ease-in-out;
 }
