Feat: 게임 업로드 항목 유효성 검사 로직 추가

--- a/src/components/gameUploadComponents/Form.css
+++ b/src/components/gameUploadComponents/Form.css
@@ -1,11 +1,11 @@
-.GameUploadSelectCustom .MuiOutlinedInput-notchedOutline {
+.gameUploadSelectCustom .MuiOutlinedInput-notchedOutline {
   @apply !border-white;
 }
 
-.GameUploadSelectCustom .MuiSelect-select {
+.gameUploadSelectCustom .MuiSelect-select {
   @apply bg-gray-700;
 }
 
-.GameUploadSelectCustom .items-baseline {
+.gameUploadSelectCustom .items-baseline {
   @apply block;
 }
