--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,15 @@
   font-weight: normal;
   font-style: normal;
 }
+* {
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
+}
 
+/* Chrome, Safari, Opera에서 스크롤바 숨기기 */
+*::-webkit-scrollbar {
+  display: none;
+}
 html,
 body,
 div,
