Feat: 게임 수정 api 연동

--- a/src/components/gameDetailComponents/GamePlaySection/GamePlaySwiper.css
+++ b/src/components/gameDetailComponents/GamePlaySection/GamePlaySwiper.css
@@ -3,7 +3,7 @@
 }
 
 .gamescreenShotSwiper .swiper-slide {
-  @apply flex justify-center items-center;
+  @apply flex justify-center items-center transform-none;
 }
 
 .gamescreenShotSwiper .swiper-slide img {
