--- a/src/components/gameDetailComponents/GamePlaySection/GamePlaySwiper.css
+++ b/src/components/gameDetailComponents/GamePlaySection/GamePlaySwiper.css
@@ -10,6 +10,6 @@
   @apply w-[198px] h-[112px] object-cover rounded-lg;
 }
 
-.gamescreenShotSwiper .swiper-slide-active img {
+.gamescreenShotSwiper .swiper-slide-next img {
   @apply w-[248px] h-[140px] rounded-lg z-10 transition-all duration-500 ease-in-out;
 }
