Feat: 게임 설명 작성 Quill 에디터 적용 및 viewer 적용

--- a/src/components/gameDetailComponents/GamePlaySection/GameDescriptionModalSwiper.css
+++ b/src/components/gameDetailComponents/GamePlaySection/GameDescriptionModalSwiper.css
@@ -3,11 +3,11 @@
 }
 
 .descriptionSwiper .swiper-wrapper {
-  @apply flex items-center h-[450px];
+  @apply h-[450px];
 }
 
 .descriptionSwiper .swiper-slide {
-  @apply w-auto;
+  @apply flex items-center;
 }
 
 .descriptionSwiper .swiper-slide img {
@@ -27,4 +27,12 @@
 }
 .descriptionSwiper .swiper-pagination-bullet-active {
   @apply w-4 h-4 bg-primary-500;
+}
+
+.ql-editor strong {
+  @apply font-bold;
+}
+
+.ql-editor em {
+  @apply italic;
 }
