--- a/src/components/gameUploadComponents/Form.css
+++ b/src/components/gameUploadComponents/Form.css
@@ -1,3 +1,4 @@
+/* 인풋 스타일 */
 .gameUploadSelectCustom .MuiOutlinedInput-notchedOutline {
   @apply !border-white;
 }
@@ -8,4 +9,37 @@
 
 .gameUploadSelectCustom .items-baseline {
   @apply block;
+}
+
+/* 리액트 Quill Style */
+.ql-container {
+  @apply border-gray-100 rounded-md;
+}
+
+.formContent .ql-editor {
+  @apply h-[436px] text-lg;
+}
+
+.ql-editor strong {
+  @apply font-bold;
+}
+
+.ql-editor em {
+  @apply italic;
+}
+
+.ql-editor h1 {
+  @apply text-3xl font-bold;
+}
+
+.ql-editor h2 {
+  @apply text-2xl font-semibold;
+}
+
+.ql-editor::before {
+  @apply text-lg font-Pretendard !text-gray-400 !not-italic;
+}
+
+.ql-editor.ql-blank::before {
+  @apply text-gray-100 font-normal;
 }
