--- a/src/components/gameUploadComponents/Form.css
+++ b/src/components/gameUploadComponents/Form.css
@@ -20,6 +20,18 @@
   @apply h-[436px] text-lg;
 }
 
+.ql-picker.ql-color .ql-selected {
+  color: black !important; /* 텍스트는 검은색으로 */
+}
+
+.ql-editor.ql-checked {
+  color: black !important; /* 검정색 텍스트로 설정 */
+}
+
+.ql-editor .ql-color {
+  color: inherit !important; /* 선택된 색상에 맞게 텍스트 색상 적용 */
+}
+
 .ql-editor strong {
   @apply font-bold;
 }
