--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@
 @font-face {
   font-family: "DungGeunMo";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff") format("woff");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
 * {
