--- a/src/components/HomeComponents/HeroSwiper.css
+++ b/src/components/HomeComponents/HeroSwiper.css
@@ -8,3 +8,10 @@
   height: auto !important;
   object-fit: fill !important;
 }
+
+.heroSwiper .swiper-pagination-bullet {
+  @apply !mr-2 w-4 h-4 bg-gray-100 opacity-100;
+}
+.heroSwiper .swiper-pagination-bullet-active {
+  @apply w-4 h-4 bg-primary-500;
+}
