--- a/src/App.css
+++ b/src/App.css
@@ -268,6 +268,10 @@ input:focus {
   @apply text-center;
 }
 
+.ql-editor .ql-align-center img {
+  @apply mx-auto block;
+}
+
 .ql-editor .ql-align-right {
   @apply text-right;
 }
@@ -299,4 +303,8 @@ input:focus {
 }
 .ql-editor .ql-indent-8 {
   @apply pl-[432px];
+}
+
+.image-actions__overlay .image-actions__toolbar {
+  @apply hidden;
 }
