Fix: 에디터 이미지 업로드 최대 너비(850px) 지정

--- a/src/App.css
+++ b/src/App.css
@@ -264,6 +264,9 @@ input:focus {
   @apply list-disc pl-6;
 }
 
+.ql-editor img {
+  @apply max-w-[850px] !important;
+}
 .ql-editor .ql-align-center {
   @apply text-center;
 }
